Fixed overflow display of decmial numbers Shorten string if longer than 14 char Add one more char if ends in decmial updated main display with a fade effect when a button is pressed updated css with fade effect for display

--- a/style.css
+++ b/style.css
@@ -9,24 +9,16 @@ body {
     background-repeat: no-repeat;
     background-position: center; 
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.name-header {
-    width: 100%;
-    background-color: rgb(0, 217, 255);
-    font-size: 4em;
-    text-align: center;
-    font-weight: bolder;
-    font-family: fantasy;
-}
-.name-header div {
-    padding: 2%;
-}
 .calc-container {
+    position: fixed;
     height: 600px;
     width: 495px;
     background-color: black;
-    margin: 10vh auto;
     background-image: url("images/img-noise-370x470.png");
     border-radius: 15px;
     border: 1px solid black;
@@ -34,21 +26,28 @@ body {
 }
 
 .display{
-    width: auto;
     height: 24%;
     margin: auto;
     display: flex;
 }
 
-output {
+div.display>output {
     width: 95%;
     margin: auto;
     background-color: white;
     border-radius: 15%;
-    border: 2px solid blue;
-    font-size: 6vh;
+    border: 1px solid blue;
     text-align: right;
-    font-size: 5rem;
+    font-size: 4rem;
+    overflow: hidden;
+}
+
+.fade-in{
+    animation:blinkingText 0.8s;
+}
+@keyframes blinkingText{
+	0%{		color: transparent;	}
+	100%{	color: #000;	}
 }
 
 .button-container {
@@ -68,7 +67,7 @@ output {
 .function-button {
     height: 100%;
     width: 25%;
-    border-radius: 40%; 
+    border-radius: 20%; 
     outline: none;
     border: 1px solid blue;
     font-size: xx-large;
@@ -76,7 +75,7 @@ output {
     font-weight: bold;
     cursor: pointer;
     background-color: #4CAF50;
-    box-shadow: 6px 6px 0px grey;
+    box-shadow: 4px 4px 0px grey;
 }
 .number-button:hover, 
 .function-button:hover {
